--- a/app/(home)/globals.css
+++ b/app/(home)/globals.css
@@ -44,12 +44,12 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-html,
+/* html,
 body {
   width: 100dvw;
   height: 100dvh;
   overflow-x: hidden;
-}
+} */
 
 :root {
   --radius: 0.625rem;
